--- a/interface_v0/c1.html
+++ b/interface_v0/c1.html
@@ -10,7 +10,7 @@
         <div id="l_text">
             bestellung aufgegeben
         </div>
-        <a class="r_button" onclick="back()"> return </a>
+        <a class="l_button" onclick="back()"> return </a>
     </div>
     <div class="beschreibung">
         
