--- a/interface_v0.1/c1.html
+++ b/interface_v0.1/c1.html
@@ -10,7 +10,7 @@
         <div id="l_text">
             bestellung aufgegeben
         </div>
-        <a class="l_button" onclick="back()"> return </a>
+        <a class="l_button" onclick="back()"> cancel </a>
     </div>
     <div class="beschreibung">
         
@@ -26,11 +26,11 @@
     <script>
         function lock() {
             document.getElementById("lockscreen").style.display = "block";
-            check();
             }
         function back() {
             document.getElementById("lockscreen").style.display = "none";
             }
+                    
     </script>
 </body>
 </html>
