--- a/interface_v0.1/mrbartender.html
+++ b/interface_v0.1/mrbartender.html
@@ -13,12 +13,14 @@
   <a class="s_element" style="background-image: url('interface/interface\ 1.png'); animation-name: s_e_1;animation-duration: 0.5s;" href="######" >Profil</a>
   <a class="s_element" style="background-image: url('interface/interface\ 4.png'); animation-name: s_e_2;animation-duration: 0.66s;" href="######" >Einstellungen</a>
   <a class="s_element" style="background-image: url('interface/interface\ 2.png'); animation-name: s_e_3;animation-duration: 0.83s;" href="######" >Anleitung</a>
-  <a class="s_element" style="background-image: url('interface/interface\ 2.png'); animation-name: s_e_4;animation-duration: 1.0s;" href="######" >Datenbank</a>
+  <div class="s_element" style="background-image: url('interface/interface\ 7.png'); animation-name: s_e_4;animation-duration: 1.0s;" href="######" >
+    <button id="b_abbruch">cancel</button>
+    Bestellter cocktail
+  </div>
 </div>
 <div class="sidebar" id="b">
   	<button class="s_button" onclick="s_open()"></button>
 </div>
-
 <!-- Page Content -->
 <div style="background-color: darkgray; position: fixed;">
 </div>
@@ -43,7 +45,7 @@
     <div class="kachel" style="background-image: url('c_icons/cocktail\ 14.png');" href="######"><div class="k_text">c14</div></div>
     <div class="kachel" style="background-image: url('c_icons/cocktail\ 15.png');" href="######"><div class="k_text">c15</div></div>
     </div>
-   <h2> Verlauf </h2>
+   <h2> Heute beliebt </h2>
    <div class="k_container">
 	  <div class="kachel" style="background-image: url('c_icons/cocktail\ 1.png');" href="######"><div class="k_text">c1</div></div>
     <div class="kachel" style="background-image: url('c_icons/cocktail\ 2.png');" href="######"><div class="k_text">c2</div></div>
@@ -54,7 +56,7 @@
     <div class="kachel" style="background-image: url('c_icons/cocktail\ 7.png');" href="######"><div class="k_text">c7</div></div>
     <div class="kachel" style="background-image: url('c_icons/cocktail\ 8.png');" href="######"><div class="k_text">c8</div></div>
    </div>
-   <h2> Heute beliebt </h2>
+   <h2> Verlauf </h2>
    <div class="k_container">
   	<div class="kachel" style="background-image: url('c_icons/cocktail\ 1.png');" href="######"><div class="k_text">c1</div></div>
     <div class="kachel" style="background-image: url('c_icons/cocktail\ 2.png');" href="######"><div class="k_text">c2</div></div>
@@ -67,7 +69,7 @@
    </div>
    <h2> Selbstkonfiguration </h2>
    <div class="k_container">
-	  <div class="kachel" style="background-image: url('interface/interface\ 5.png');" href="######"><div class="k_text">c1</div></div>
+	  <div class="kachel" style="background-image: url('interface/interface\ 5.png');" href="######"><div class="k_text">Selbstkonfig.</div></div>
    </div>
    <br>
    <br>
